tests/NormalTests/paczka1/small_fuzzy/19931192.err
Error in line 2: fBlNLA72 A34 78,87
Error in line 5: S916 S916 55,1
Error in line 1: GDfFuUh S75 85,4
Error in line 3: fBlNLA72 A34 142,4
Error in line 7: MtwO S75 22,8
Error in line 11: fBlNLA72 S75 89,5
